<resources>
    <string name="app_name" translatable="false">ProjProgAvanc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="save_item">Save</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="insert_item">Insert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="game_type_spinner">Game Type</string>
    <string name="game_spinner">Game</string>
    <string name="store_type_spinner">Store Type</string>
    <string name="store_spinner">Store</string>
    <string name="game_name_input">Game Name</string>
    <string name="store_name_input">Store Name</string>
    <string name="store_address_input">Store Address</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="price_input">Price</string>
    <string name="GameName_error">Game name is required</string>
    <string name="StoreName_error">Store name is required</string>
    <string name="StoreAddress_error">Store address is required</string>
    <string name="Price_error">Price is required</string>
    <string name="GameSpin_error">Game must be selected</string>
    <string name="GameType_error">Game Type must be selected</string>
    <string name="StoreType_error">Store type must be selected</string>
    <string name="StoreSpin_error">Store must be selected</string>
    <string name="SaveGameStore_success">Game and Store Saved successfully</string>
    <string name="General_error">An error has occurred</string>
    <string name="deletegamestore_label" translatable="false">fragment_delete_game_store</string>
    <string name="delete_game_title">Delete Game</string>
    <string name="deleteGameStore_gameName">Game</string>
    <string name="deleteGame_Name">Game</string>
    <string name="DeleteGameStore_storeName">Store</string>
    <string name="DeleteStore_Name">Store</string>
    <string name="DeleteGameStore_price">Price</string>
    <string name="delete_text">Delete</string>
    <string name="menu_Games">Games</string>
    <string name="menu_store">Stores</string>
    <string name="insertGameStore_title">Insert Game Store Combination</string>
    <string name="EditGameStore_title">Edit Game Store Combination</string>
    <string name="delete_gameStore_title">Delete Game Store Combination</string>
    <string name="delete_type">Type</string>
    <string name="fragment_game_list">Games</string>
    <string name="fragment_store_list">Stores</string>
    <string name="fragment_delete_game">Delete Game</string>
    <string name="fragment_insert_game">Add Game</string>
    <string name="fragment_insert_store">Add Store</string>
    <string name="fragment_delete_store">Delete Store</string>
    <string name="fragment_insert_gamestore">Add Combination</string>
    <string name="name_error">A Name must be given</string>
    <string name="Type_error">A Type must be selected</string>
    <string name="InsertGame_title">Add a Game</string>
    <string name="EditGame_title">Edit a Game</string>
    <string name="delete_gameStore">Delete combination</string>
    <string name="delete_gamestore_question">Are you sure you want to delete this combination?</string>
    <string name="delete_game_question">Are you sure you want to delete this game?</string>
    <string name="delete_gameStore_success">Combination successfully deleted</string>
    <string name="delete_game_success">Game successfully deleted</string>
    <string name="Wishlist_title">Wishlist</string>
    <string name="save_game_success">Game Saved Successfully</string>
    <string name="save_store_success">Store Saved Successfully</string>
    <string name="insertStore_title">Add Store</string>
    <string name="EditStore_title">Edit a Store</string>
    <string name="delete_store_title">Delete Store</string>
    <string name="delete_store_question">Are you sure you want to delete this store?</string>
    <string name="delete_store_success">Store deleted successfully</string>
    <string name="deleteStore_address">Address</string>


</resources>