<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/Wishlist"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_game_store_list" />
        <item
            android:id="@+id/GameList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Games" />
        <item
            android:id="@+id/StoreList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_store" />
    </group>
</menu>