<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertStoreFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:hint="@string/store_name_input"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextStoreAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_address_input"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textViewStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/store_type_spinner" />

            <Spinner
                android:id="@+id/spinnerStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>